objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Birthdate ) ) , 
IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ), 
IF(YEAR (Today()) - YEAR ( Birthdate )== -1,0,YEAR (Today()) - YEAR ( Birthdate )), 
IF(YEAR (Today()) - YEAR ( Birthdate ) -1 == -1,0,YEAR (Today()) - YEAR ( Birthdate ) -1) ), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Contact_County__c</fullName>
        <label>CC_Contact_County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CC_Physical_Address_State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>CC_County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal Guardian</fullName>
                </value>
                <value>
                    <fullName>Representative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Mailing_Address_County__c</fullName>
        <label>Mailing Address County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CC_Mailing_Address_State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>CC_County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Mailing_Address_State__c</fullName>
        <label>Mailing Address State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CC_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Main_Phone_Type__c</fullName>
        <label>Main Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Other_Mailing_Address_County__c</fullName>
        <label>Other Mailing Address County</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Other_Phone_Type__c</fullName>
        <label>Other Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Other_Physical_Address_County__c</fullName>
        <label>Other Physical Address County</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Other_Written_Language__c</fullName>
        <label>CC_Other_Written_Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Person_Related_To_Individual__c</fullName>
        <label>CC_Person_Related_To_Individual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Sister/Half-Sister</fullName>
                </value>
                <value>
                    <fullName>Brother/Half-Brother</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Step Mother</fullName>
                </value>
                <value>
                    <fullName>Step Father</fullName>
                </value>
                <value>
                    <fullName>Step Daughter</fullName>
                </value>
                <value>
                    <fullName>Step Son</fullName>
                </value>
                <value>
                    <fullName>Step Sister</fullName>
                </value>
                <value>
                    <fullName>Step Brother</fullName>
                </value>
                <value>
                    <fullName>Aunt (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Uncle (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Niece (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Nephew (Including Great)</fullName>
                </value>
                <value>
                    <fullName>First Cousin</fullName>
                </value>
                <value>
                    <fullName>Grandmother (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Grandfather (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Grandson (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Granddaughter (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Step Grandmother (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Step Grandfather (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Step Grandson (Including Great)</fullName>
                </value>
                <value>
                    <fullName>Step Granddaughter (Including Great)</fullName>
                </value>
                <value>
                    <fullName>First Cousin - Once Removed</fullName>
                </value>
                <value>
                    <fullName>Legal Guardian</fullName>
                </value>
                <value>
                    <fullName>Legally Guarded</fullName>
                </value>
                <value>
                    <fullName>Unrelated Placement, Court-Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Physical_Address_State__c</fullName>
        <label>Physical Address State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Chin</fullName>
                </value>
                <value>
                    <fullName>Chinese Cantonese</fullName>
                </value>
                <value>
                    <fullName>Chinese Mandarin</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Haitian Creole</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Iranian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Kanyarwanda</fullName>
                </value>
                <value>
                    <fullName>Karen</fullName>
                </value>
                <value>
                    <fullName>Khmer</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Kurdish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_SSN__c</fullName>
        <label>Social Security Number (SSN)</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Same_as_physical_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as physical address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Spoken_Language__c</fullName>
        <label>Spoken Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Chin</fullName>
                </value>
                <value>
                    <fullName>Chinese Cantonese</fullName>
                </value>
                <value>
                    <fullName>Chinese Mandarin</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Haitian Creole</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Iranian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Kanyarwanda</fullName>
                </value>
                <value>
                    <fullName>Karen</fullName>
                </value>
                <value>
                    <fullName>Khmer</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Kurdish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JR.</fullName>
                </value>
                <value>
                    <fullName>SR.</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>VII</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Written_Language__c</fullName>
        <label>Written Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Zip4__c</fullName>
        <label>Zip4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Zip4mailing__c</fullName>
        <label>Zip +4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Title__c</fullName>
        <label>Old Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?cid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__CGeoCode?id=&quot; &amp; Id,&quot;Locate Contact&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Contact Lat</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Contact Lon</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Address__c</fullName>
        <inlineHelpText>Contact&apos;s Mapping Address</inlineHelpText>
        <label>Contact Mapping Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing</fullName>
                    <default>true</default>
                    <label>Mailing</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Do Not Map</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <inlineHelpText>Contact&apos;s Mapping Status.</inlineHelpText>
        <label>Contact Mapping Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Located Yet</fullName>
                    <default>true</default>
                    <label>Not Located Yet</label>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>Problem with Address</fullName>
                </value>
                <value>
                    <fullName>Bad Google Key</fullName>
                </value>
                <value>
                    <fullName>Google Exhausted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formatted_Mailing_Address__c</fullName>
        <formula>IF(  LEN(MailingStreet) &lt;&gt; FIND(&apos;;;&apos;, MailingStreet)+1, SUBSTITUTE( MailingStreet , &apos;;;&apos;, &apos;,&apos;),SUBSTITUTE( MailingStreet , &apos;;;&apos;, &apos;&apos;))+&apos;, &apos;+ MailingCity+&apos;, &apos; +TEXT( CC_Mailing_Address_State__c )+&apos;, &apos; + MailingPostalCode</formula>
        <label>Formatted Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Physical_Address__c</fullName>
        <formula>IF(  LEN(OtherStreet) &lt;&gt; FIND(&apos;;;&apos;, OtherStreet)+1, SUBSTITUTE( OtherStreet , &apos;;;&apos;, &apos;,&apos;),SUBSTITUTE( OtherStreet , &apos;;;&apos;, &apos;&apos;))+&apos;, &apos;+OtherCity+&apos;, &apos;+TEXT(CC_Physical_Address_State__c)+&apos;, &apos; + OtherPostalCode</formula>
        <label>Formatted Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_OLD_TITLE__c</fullName>
        <label>ORGCUSTOM4_OLD_TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>CC_Application__c</referenceTo>
        <relationshipLabel>Representatives(Contact)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>CC_External_User</fullName>
        <active>true</active>
        <label>External User</label>
    </recordTypes>
    <recordTypes>
        <fullName>CC_Individual</fullName>
        <active>true</active>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>CC_Representative</fullName>
        <active>true</active>
        <label>Representative</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>